src/objects/Application_Request__c.object
<CustomObject>
    <fields>
        <fullName>App_Enhancement_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App/Enhancement Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up to existing applications to enable us to track releases and see what enhancements have been made for an application over time.</description>
        <inlineHelpText>Look-up to existing applications to enable us to track releases and see what enhancements have been made for an application over time.</inlineHelpText>
        <label>Existing Application</label>
        <referenceTo>DTC_Application__c</referenceTo>
        <relationshipName>Application_Enhancement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Application_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Application Name/Release</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01/26/18</fullName>
                </value>
                <value>
                    <fullName>02/23/18</fullName>
                </value>
                <value>
                    <fullName>03/30/18</fullName>
                </value>
                <value>
                    <fullName>04/27/18</fullName>
                </value>
                <value>
                    <fullName>05/25/18</fullName>
                </value>
                <value>
                    <fullName>06/29/18</fullName>
                </value>
                <value>
                    <fullName>07/27/18</fullName>
                    <label>07/26/18</label>
                </value>
                <value>
                    <fullName>08/30/18</fullName>
                </value>
                <value>
                    <fullName>09/27/18</fullName>
                </value>
                <value>
                    <fullName>10/25/18</fullName>
                </value>
                <value>
                    <fullName>11/29/18</fullName>
                </value>
                <value>
                    <fullName>12/20/18</fullName>
                </value>
                <value>
                    <fullName>FY2018 TBD</fullName>
                </value>
                <value>
                    <fullName>02/24/17</fullName>
                </value>
                <value>
                    <fullName>03/31/17</fullName>
                </value>
                <value>
                    <fullName>04/28/17</fullName>
                </value>
                <value>
                    <fullName>05/26/17</fullName>
                </value>
                <value>
                    <fullName>06/30/17</fullName>
                </value>
                <value>
                    <fullName>07/28/17</fullName>
                </value>
                <value>
                    <fullName>08/25/17</fullName>
                </value>
                <value>
                    <fullName>09/29/17</fullName>
                </value>
                <value>
                    <fullName>10/27/17</fullName>
                </value>
                <value>
                    <fullName>11/24/17</fullName>
                </value>
                <value>
                    <fullName>12/22/17</fullName>
                </value>
                <value>
                    <fullName>1/31/19</fullName>
                </value>
                <value>
                    <fullName>2/28/19</fullName>
                </value>
                <value>
                    <fullName>3/28/19</fullName>
                </value>
                <value>
                    <fullName>4/25/19</fullName>
                </value>
                <value>
                    <fullName>5/23/19</fullName>
                </value>
                <value>
                    <fullName>6/27/19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Application process</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>User Stories Approved &amp; In Development</fullName>
                </value>
                <value>
                    <fullName>Ready for UAT Deployment</fullName>
                    <label>Ready for Regression Deployment</label>
                </value>
                <value>
                    <fullName>In UAT</fullName>
                    <label>In Regression</label>
                </value>
                <value>
                    <fullName>UAT No-go</fullName>
                    <label>Regression No-go</label>
                </value>
                <value>
                    <fullName>Customer Validated</fullName>
                </value>
                <value>
                    <fullName>Ready for Staging Deployment</fullName>
                </value>
                <value>
                    <fullName>In Staging</fullName>
                </value>
                <value>
                    <fullName>Ready for Prod Deployment</fullName>
                </value>
                <value>
                    <fullName>Deployed to Prod, Not Validated</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                    <label>Implemented &amp; Approved in Prod</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Failed to Obtain Production Sign-Off</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Build&amp;SIT Complete</fullName>
                    <isActive>false</isActive>
                    <label>Build&amp;SIT Complete</label>
                </value>
                <value>
                    <fullName>UAT Case Received</fullName>
                    <isActive>false</isActive>
                    <label>UAT Case Received</label>
                </value>
                <value>
                    <fullName>Under Development</fullName>
                    <isActive>false</isActive>
                    <label>Under Development</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <isActive>false</isActive>
                    <label>Under Review</label>
                </value>
                <value>
                    <fullName>User stories Complete</fullName>
                    <isActive>false</isActive>
                    <label>User stories Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>